opam-version: "2.0"
synopsis: "A type system to prevent data races"
version: "0.1"
maintainer: "msr45@cam.ac.uk"
authors: ["Mukul Rathi"]
homepage: "https://github.com/mukul-rathi/bolt"
bug-reports: "https://github.com/mukul-rathi/bolt/issues"
dev-repo: "git+https://github.com/mukul-rathi/bolt.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"
  "qcheck"
  "qcheck-alcotest"
  "alcotest"
  "odoc"
  "core"
  "ocamlformat" {="0.12"}
  "bisect_ppx" {dev & >= "2.0.0"}
  "ppx_jane"
  "ocaml-migrate-parsetree"
  "menhir"
  "fmt"
]

pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
  ["ocaml-migrate-parsetree.git" "git+https://github.com/ocaml-ppx/ocaml-migrate-parsetree.git"]
]