opam-version: "2.0"
synopsis: "A type system to prevent data races"
version: "1.2"
maintainer: "msr45@cam.ac.uk"
authors: ["Mukul Rathi"]
homepage: "https://github.com/mukul-rathi/bolt"
bug-reports: "https://github.com/mukul-rathi/bolt/issues"
dev-repo: "git+https://github.com/mukul-rathi/bolt.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {= "2.0.0"}
  "qcheck"  {= "0.12"}
  "qcheck-alcotest" {= "0.12"}
  "alcotest" {= "0.8.5"}
  "odoc" {= "1.4.2"}
  "core" {= "v0.12.4"}
  "ocamlformat" {="0.12"}
  "bisect_ppx" {dev & >= "2.0.0"}
  "ppx_jane"{= "v0.12.0"}
  "menhir"{= "20190924"}
  "fmt" { ="0.8.8"}
]

pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
]