(copy_files parsing/*.ml{,i,l,y})

(executable
 (public_name bolt)
 (name main)
 (modules_without_implementation ast_types)
 (libraries core)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))

(ocamllex lexer)

(menhir
 (modules parser))
