(copy_files parsing/*.ml{,i,l,y})

(copy_files ast/*.ml{,i})

(executable
 (public_name bolt)
 (name main)
 (libraries core base)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))

(ocamllex lexer)

(menhir
 (modules parser))
