(library
 (name ast_types)
 (modules ast_types)
 (libraries core base fmt)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -check-doc-comments -annotated-ignores -styler -pretty
    -dated-deprecation)))

(library
 (name pprint_ast)
 (modules pprint_ast)
 (libraries core base fmt ast_types)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -check-doc-comments -annotated-ignores -styler -pretty
    -dated-deprecation)))
