(executable
 (name main)
 (modules main)
 (libraries core fmt compile_program_ir)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))

(library
 (public_name bolt)
 (name compile_program_ir)
 (modules compile_program_ir)
 (libraries core fmt parsing typing data_race_checker ir_gen)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))
