(library
 (name lex_and_parse)
 (modules lex_and_parse lexer parser)
 (libraries core base fmt parsed_ast pprint_past)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))

(ocamllex lexer)

(menhir
 (modules parser))

(library
 (name parsed_ast)
 (modules parsed_ast)
 (libraries core base fmt ast_types)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -check-doc-comments -annotated-ignores -styler -pretty
    -dated-deprecation)))

(library
 (name pprint_past)
 (modules pprint_past)
 (libraries core base fmt pprint_ast ast_types parsed_ast)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -check-doc-comments -annotated-ignores -styler -pretty
    -dated-deprecation)))
