(library
 (name ir_gen)
 (public_name ir_gen)
 (libraries core base fmt data_race_checker ast)
 (flags
  (:standard -w -39))
 (preprocess
  (pps ppx_deriving_protobuf ppx_jane bisect_ppx --conditional))
 (lint
  (pps ppx_js_style -check-doc-comments -annotated-ignores -styler -pretty
    -dated-deprecation)))
